--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1378,7 +1378,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "7155957b"
+            "7155957b",
+            "d2e2602f"
           ],
           "type": "jade"
         },
@@ -1499,6 +1500,37 @@
           "path": "js/functions/getData/profilePortfolios.js",
           "output": "js/functions/getData/profilePortfolios-dist.js",
           "name": "profilePortfolios.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e1249ab4": {
+          "id": "e1249ab4",
+          "path": "mixins/modals/edit-background-images.jade",
+          "output": "mixins/modals/edit-background-images.html",
+          "name": "edit-background-images.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "2ce9ac23": {
+          "id": "2ce9ac23",
+          "path": "js/functions/modals/collectData/backgroundImages.js",
+          "output": "js/functions/modals/collectData/backgroundImages-dist.js",
+          "name": "backgroundImages.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
