Implemented background images feature, sprint #1 is done.

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1541,6 +1541,22 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "42f3e985": {
+          "id": "42f3e985",
+          "path": "js/functions/modals/initializing/backgroundImagesInputs.js",
+          "output": "js/functions/modals/initializing/backgroundImagesInputs-dist.js",
+          "name": "backgroundImagesInputs.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
