--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # please add your ide stuff here
 .idea
 .vscode
-webui/node_modules/
+node_modules/
 
 # default data dirs
 *_profile/
@@ -26,7 +26,6 @@ __pycache__/
 packages/
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
