coper adding in progress

--- a/ethnode/webui/package.json
+++ b/ethnode/webui/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.18.13",
+    "croppie": "^2.5.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^1.0.2",
