--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 node_modules
 ethnode/webui/node_modules/
 ethnode/webui/dist/
+ethnode/webui/node_modules
+ethnode/webui/dist
 
 # default data dirs
 *_profile/
