--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # please add your ide stuff here
 .idea
 .vscode
-node_modules/
+node_modules
+ethnode/webui/node_modules/
+ethnode/webui/dist/
+ethnode/webui/node_modules
+ethnode/webui/dist
 
 # default data dirs
 *_profile/
