--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 .idea
 .vscode
 .DS_Store
-
+node_modules
+ethnode/webui/node_modules/
+ethnode/webui/dist/
+ethnode/webui/node_modules
+ethnode/webui/dist
 
 
 # default data dirs
