--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ node_modules
 ethnode/webui/node_modules/
 ethnode/webui/node_modules
 
+ethnode/wasui
+
 # default data dirs
 *_profile/
 *_profile_files/
