wip ip and ports

--- a/ethnode/cdnapidef/swagger/v1.yaml
+++ b/ethnode/cdnapidef/swagger/v1.yaml
@@ -48,3 +48,17 @@ paths:
             type: "string"
             maxLength: 64
             minLength: 64
+  /reqheaders:
+    get:
+      tags:
+      - "CDN"
+      summary: "get client request headers"
+      description: "retrieve request headers map"
+      operationId: "getReqHeaders"
+      produces:
+      - "*/*"
+      responses:
+        200:
+          description: "ok"
+        400:
+          description: "err"
