--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 .vscode
 .DS_Store
 
+dist/
+node_modules/
+ethnode/webui/node_modules/
+ethnode/webui/dist/
+ethnode/webui/node_modules
+ethnode/webui/dist
+
 
 # default data dirs
 *_profile/
