--- a/ethnode/webui/package.json
+++ b/ethnode/webui/package.json
@@ -10,6 +10,7 @@
   "author": "ramel9",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-datepicker": "^1.7.1",
     "croppie": "^2.5.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
